# Agentic-RAG

./: .gitignore  .pylintrc  AGENTS.md  README.md  barrier.md  pyproject.toml  requirements.txt  start_api.py  structure.md
agents/: __init__.py
agents/rag/: model_factory.py  rag_chat_service.py  rag_retrieval.py
api/: main.py  schemas.py
application/: chat_service.py
bot-web/: README.md  index.html  package-lock.json  package.json
bot-web/src/: App.tsx  api.ts  react-syntax-highlighter.d.ts  (+2 more)
common/: langfuse_observability.py  langfuse_prompts.py  message_content.py  rag_assets.py
evals/: dataset_builder.py  langfuse_experiment.py  ragas_evaluator.py  ragas_shared.py
knowledge/: __init__.py
persistence/: __init__.py  base.py  db.py  models.py  repository.py
reports/: ragas_report_25_20260616-200536.json  ragas_report_25_20260616-200536.md  ragas_report_smoke_20260615-225454.json  ragas_report_smoke_20260615-225454.md  ragas_report_smoke_cr-faithfulness_20260617-184209.json  ragas_report_smoke_cr-faithfulness_20260617-184209.md  ragas_report_smoke_cr-faithfulness_20260619-230225.json  ragas_report_smoke_cr-faithfulness_20260619-230225.md
tests/: conftest.py  test_api.py  test_chat_service.py  test_conversation_repository.py  test_document_chunk.py  test_document_clean.py  test_langfuse_experiment.py  test_langfuse_observability.py  test_langfuse_prompts.py  test_message_content.py  test_rag_chat_service_mode.py  test_rag_chat_service_stream.py  test_rag_retrieval.py  test_ragas_dataset_builder.py  test_ragas_eval_dataset.py  test_ragas_evaluator.py
(+39 files in other folders)
