[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG System"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.18.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "PyYAML>=6.0,<7.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-docling>=2.0.0,<3.0.0",
    "langfuse>=3.8.0,<5.0.0",
    "langgraph>=1.2.0,<2.0.0",
    "langgraph-checkpoint-postgres>=3.1.0,<4.0.0",
    "langchain-milvus>=0.3.0,<1.0.0",
    "langchain-openai>=1.2.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "psycopg[binary,pool]>=3.3.0,<4.0.0",
    "pymilvus>=2.6.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "ragas>=0.3.0,<0.4.0",
    "sqlalchemy>=2.0.50,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "application*", "knowledge*", "evals*", "persistence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]
